# simple-llm-docx-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  db.py  logging_utils.py  main.py  models.py  schemas.py  storage.py
app/services/: document_service.py  embeddings.py  prompts.py  qa_service.py  retrieval.py
tests/: conftest.py  test_api.py  test_retrieval.py
