[project]
name = "simple-llm-docx-api"
version = "0.1.0"
description = "Minimal DOCX Q&A API using FastAPI, SQLModel, and OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9,<1.0",
    "fastapi>=0.116.0,<1.0.0",
    "langchain>=0.3.27,<0.4.0",
    "langchain-community>=0.3.27,<0.4.0",
    "langchain-openai>=0.3.28,<0.4.0",
    "langchain-text-splitters>=0.3.9,<0.4.0",
    "numpy>=2.3.2,<3.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "razdel>=0.5.0,<0.6.0",
    "sentence-transformers>=5.1.0,<6.0.0",
    "sqlmodel>=0.0.24,<0.1.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.12.9,<0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
