[project]
name = "simple-llm-docx-api"
version = "0.1.0"
description = "Minimal DOCX Q&A API using FastAPI, SQLModel, and OpenRouter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0,<0.22.0",
    "docx2txt>=0.9,<1.0",
    "fastapi>=0.135.1,<1.0.0",
    "greenlet>=3.2.4,<4.0.0",
    "langchain-community>=0.4.1,<0.5.0",
    "langchain-core>=1.2.18,<2.0.0",
    "langchain-openai>=1.1.11,<2.0.0",
    "langchain-text-splitters>=1.1.1,<2.0.0",
    "numpy>=2.3.2,<3.0.0",
    "openai>=2.26.0,<3.0.0",
    "python-multipart>=0.0.20,<0.1.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "razdel>=0.5.0,<0.6.0",
    "sqlmodel>=0.0.37,<0.1.0",
    "uvicorn[standard]>=0.41.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.15.5,<0.16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
